@@ -31,7 +31,7 @@ _xapian_la_LIBADD = $(XAPIAN_LIBS) $(RUBY_LIBS)
 
 CLEANFILES =
 if MAINTAINER_MODE
-RUN_SWIG := $(PERL) '$(top_srcdir)'/swig-depcomp $(SWIG)
+RUN_SWIG = $(PERL) '$(top_srcdir)'/swig-depcomp $(SWIG)
 
 xapian_wrap.cc xapian_wrap.h: xapian_wrap.stamp
 	@stamp=xapian_wrap.stamp; $(make_many_locked)
